; ModuleID = '/home/carl/AnghaBench/curl/packages/OS400/extr_ccsidcurl.c_curl_pushheader_bynum_cssid.c'
source_filename = "/home/carl/AnghaBench/curl/packages/OS400/extr_ccsidcurl.c_curl_pushheader_bynum_cssid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_pushheaders = type { i32 }

@ASCII_CCSID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @curl_pushheader_bynum_cssid(%struct.curl_pushheaders* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.curl_pushheaders*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store %struct.curl_pushheaders* %0, %struct.curl_pushheaders** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  store i8* null, i8** %7, align 8
  %9 = load %struct.curl_pushheaders*, %struct.curl_pushheaders** %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = call i8* @curl_pushheader_bynum(%struct.curl_pushheaders* %9, i64 %10)
  store i8* %11, i8** %8, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = load i8*, i8** %8, align 8
  %17 = load i32, i32* @ASCII_CCSID, align 4
  %18 = call i8* @dynconvert(i32 %15, i8* %16, i32 -1, i32 %17)
  store i8* %18, i8** %7, align 8
  br label %19

19:                                               ; preds = %14, %3
  %20 = load i8*, i8** %7, align 8
  ret i8* %20
}

declare dso_local i8* @curl_pushheader_bynum(%struct.curl_pushheaders*, i64) #1

declare dso_local i8* @dynconvert(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
